# Corewar

./: CMakeLists.txt  Makefile  README.md  a.out  author  bee_gees.cor  jumper.cor  slider2.cor
inc/: core.h  op.h
includes/: core.h  op.h  vm.h
libft/: Makefile  a.out  counters.c  ft_atoi.c  ft_atoi_ptr.c  ft_atointmxt.c  ft_bzero.c  ft_count_word.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprime.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_nextprime.c  ft_printf.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putnstr.c  ft_putstr.c  ft_putstr_fd.c  (+39 more)
libft/includes/: libft.h
libraries/libft/: Makefile  author  ft_abs.c  ft_atoi.c  ft_box_destructor.c  ft_bzero.c  ft_card_destructor.c  ft_char.c  ft_conver.c  ft_converh.c  ft_count_c.c  ft_error.c  ft_factorial.c  ft_hex.c  ft_intlen.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_number.c  ft_octal.c  ft_printf.c  ft_putc.c  ft_putchar.c  (+53 more)
libraries/libft/includes/: libft.h
sources/: calc_codage.c  core_first.c  finish_assembler.c  finish_validation.c  flag_a.c  make_cmd_list.c  op.c  start_read_cmd.c  start_reading.c  start_write_infile.c  vm_cycle_manage.c  vm_dump.c  vm_get_players.c  vm_list_player.c  vm_list_proc.c  vm_main.c  vm_oper_bit.c  vm_oper_bonus.c  vm_oper_def.c  vm_oper_ilong.c  vm_oper_math.c  vm_oper_spec.c  vm_proc_sidekick.c  vm_process_unit.c  vm_readfile.c  vm_wizard.c  vs_draw_proc.c  vs_nstuff.c  vs_status.c  vs_stuff.c  vs_visual.c  write_binary.c  write_bot_name.c  write_couple_arg.c  writing_labels.c
srcs/: calc_codage.c  core_first.c  finish_assembler.c  finish_validation.c  flag_a.c  make_cmd_list.c  start_read_cmd.c  start_reading.c  start_write_infile.c  write_binary.c  write_bot_name.c  write_couple_arg.c  writing_labels.c
vm_champs/champs/: V3M.cor  V3M.s  V3M2.cor  V3M2.s  new.s  slider2.cor  slider2.s
vm_champs/champs/championships/2014/esusseli/: gedeon.cor  gedeon.s
vm_champs/champs/championships/2017/gnebie/: ultima.cor  ultima.s
vm_champs/champs/examples/: turtle.s
vm_champs/gnebie/: ultima.cor  ultima.s
